--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "start": "npm build:dev && nodemon build/server.bundle.js",
+    "start": "npm run build:dev && node build/server.bundle.js",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production"
